--- a/data/cards/05498296.yaml
+++ b/data/cards/05498296.yaml
@@ -59,6 +59,10 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Common
+  - set_number: SR13-EN012
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   - set_number: DR04-EN085
     set_name: Dark Revelation Volume 4
     rarities:
@@ -76,6 +80,10 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Common
+  - set_number: SR13-DE012
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   fr:
   - set_number: EEN-FR025
     set_name: Elemental Energy
@@ -87,6 +95,10 @@ sets:
     - Common
   - set_number: LCJW-FR247
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
+    rarities:
+    - Common
+  - set_number: SR13-FR012
+    set_name: 'Structure Deck: Dark World'
     rarities:
     - Common
   it:
@@ -102,9 +114,17 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Common
+  - set_number: SR13-IT012
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   pt:
   - set_number: LCJW-PT247
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
+    rarities:
+    - Common
+  - set_number: SR13-PT012
+    set_name: 'Structure Deck: Dark World'
     rarities:
     - Common
   ja:
