--- a/data/cards/06214884.yaml
+++ b/data/cards/06214884.yaml
@@ -60,6 +60,10 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Ultra Rare
+  - set_number: SR13-EN009
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   - set_number: DR04-EN082
     set_name: Dark Revelation Volume 4
     rarities:
@@ -78,6 +82,10 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Ultra Rare
+  - set_number: SR13-DE009
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   fr:
   - set_number: EEN-FR022
     set_name: Elemental Energy
@@ -92,6 +100,10 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Ultra Rare
+  - set_number: SR13-FR009
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   it:
   - set_number: EEN-IT022
     set_name: Elemental Energy
@@ -106,11 +118,19 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Ultra Rare
+  - set_number: SR13-IT009
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   pt:
   - set_number: LCJW-PT244
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Ultra Rare
+  - set_number: SR13-PT009
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   ja:
   - set_number: EEN-JP022
     set_name: Elemental Energy
