--- a/data/cards/07459013.yaml
+++ b/data/cards/07459013.yaml
@@ -58,6 +58,10 @@ sets:
     set_name: Gates of the Underworld Structure Deck
     rarities:
     - Common
+  - set_number: SR13-EN016
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   - set_number: DR04-EN061
     set_name: Dark Revelation Volume 4
     rarities:
@@ -75,6 +79,10 @@ sets:
     set_name: Gates of the Underworld Structure Deck
     rarities:
     - Common
+  - set_number: SR13-DE016
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   fr:
   - set_number: EEN-FR001
     set_name: Elemental Energy
@@ -88,6 +96,10 @@ sets:
     set_name: Gates of the Underworld Structure Deck
     rarities:
     - Common
+  - set_number: SR13-FR016
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   it:
   - set_number: EEN-IT001
     set_name: Elemental Energy
@@ -99,6 +111,15 @@ sets:
     - Common
   - set_number: SDGU-IT004
     set_name: Gates of the Underworld Structure Deck
+    rarities:
+    - Common
+  - set_number: SR13-IT016
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
+  pt:
+  - set_number: SR13-PT016
+    set_name: 'Structure Deck: Dark World'
     rarities:
     - Common
   ja:
