--- a/data/cards/07623640.yaml
+++ b/data/cards/07623640.yaml
@@ -51,21 +51,42 @@ sets:
     set_name: Gates of the Underworld Structure Deck
     rarities:
     - Super Rare
+  - set_number: SR13-EN015
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   de:
   - set_number: SDGU-DE003
     set_name: Gates of the Underworld Structure Deck
     rarities:
     - Super Rare
+  - set_number: SR13-DE015
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   fr:
   - set_number: SDGU-FR003
     set_name: Gates of the Underworld Structure Deck
     rarities:
     - Super Rare
+  - set_number: SR13-FR015
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   it:
   - set_number: SDGU-IT003
     set_name: Gates of the Underworld Structure Deck
     rarities:
     - Super Rare
+  - set_number: SR13-IT015
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
+  pt:
+  - set_number: SR13-PT015
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   ja:
   - set_number: SD21-JP003
     set_name: "Structure Deck: Devil's Gate"
