--- a/data/cards/10131855.yaml
+++ b/data/cards/10131855.yaml
@@ -50,6 +50,10 @@ sets:
     set_name: 2018 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: SR13-EN035
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   de:
   - set_number: COTD-DE074
     set_name: Code of the Duelist
@@ -57,6 +61,10 @@ sets:
     - Common
   - set_number: MP18-DE084
     set_name: 2018 Mega-Tin Mega Pack
+    rarities:
+    - Common
+  - set_number: SR13-DE035
+    set_name: 'Structure Deck: Dark World'
     rarities:
     - Common
   fr:
@@ -68,6 +76,10 @@ sets:
     set_name: 2018 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: SR13-FR035
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   it:
   - set_number: COTD-IT074
     set_name: Code of the Duelist
@@ -77,6 +89,10 @@ sets:
     set_name: 2018 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: SR13-IT035
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   pt:
   - set_number: COTD-PT074
     set_name: Code of the Duelist
@@ -84,6 +100,10 @@ sets:
     - Common
   - set_number: MP18-PT084
     set_name: 2018 Mega-Tin Mega Pack
+    rarities:
+    - Common
+  - set_number: SR13-PT035
+    set_name: 'Structure Deck: Dark World'
     rarities:
     - Common
   ja:
