--- a/data/cards/15667446.yaml
+++ b/data/cards/15667446.yaml
@@ -52,24 +52,45 @@ sets:
     rarities:
     - Ultra Rare
     - Ultimate Rare
+  - set_number: SR13-EN006
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   de:
   - set_number: PHSW-DE085
     set_name: Photon Shockwave
     rarities:
     - Ultra Rare
     - Ultimate Rare
+  - set_number: SR13-DE006
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   fr:
   - set_number: PHSW-FR085
     set_name: Photon Shockwave
     rarities:
     - Ultra Rare
     - Ultimate Rare
+  - set_number: SR13-FR006
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   it:
   - set_number: PHSW-IT085
     set_name: Photon Shockwave
     rarities:
     - Ultra Rare
     - Ultimate Rare
+  - set_number: SR13-IT006
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
+  pt:
+  - set_number: SR13-PT006
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   ja:
   - set_number: EP12-JP026
     set_name: Extra Pack 2012
