--- a/data/cards/23898021.yaml
+++ b/data/cards/23898021.yaml
@@ -56,6 +56,10 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: SR13-EN022
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   de:
   - set_number: SR06-DE000
     set_name: 'Structure Deck: Lair of Darkness'
@@ -65,6 +69,10 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: SR13-DE022
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   fr:
   - set_number: SR06-FR000
     set_name: 'Structure Deck: Lair of Darkness'
@@ -74,6 +82,10 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: SR13-FR022
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   it:
   - set_number: SR06-IT000
     set_name: 'Structure Deck: Lair of Darkness'
@@ -83,6 +95,10 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: SR13-IT022
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   pt:
   - set_number: SR06-PT000
     set_name: 'Structure Deck: Lair of Darkness'
@@ -92,6 +108,10 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: SR13-PT022
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   ja:
   - set_number: SR06-JP000
     set_name: 'Structure Deck R: Curse of the Dark'
