--- a/data/cards/29826127.yaml
+++ b/data/cards/29826127.yaml
@@ -53,6 +53,10 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Common
+  - set_number: SR13-EN034
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   - set_number: DR04-EN111
     set_name: Dark Revelation Volume 4
     rarities:
@@ -70,6 +74,10 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Common
+  - set_number: SR13-DE034
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   fr:
   - set_number: EEN-FR051
     set_name: Elemental Energy
@@ -81,6 +89,10 @@ sets:
     - Common
   - set_number: LCJW-FR254
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
+    rarities:
+    - Common
+  - set_number: SR13-FR034
+    set_name: 'Structure Deck: Dark World'
     rarities:
     - Common
   it:
@@ -96,9 +108,17 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Common
+  - set_number: SR13-IT034
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   pt:
   - set_number: LCJW-PT254
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
+    rarities:
+    - Common
+  - set_number: SR13-PT034
+    set_name: 'Structure Deck: Dark World'
     rarities:
     - Common
   ja:
