--- a/data/cards/32619583.yaml
+++ b/data/cards/32619583.yaml
@@ -64,6 +64,10 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Secret Rare
+  - set_number: SR13-EN008
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   - set_number: DR04-EN083
     set_name: Dark Revelation Volume 4
     rarities:
@@ -86,6 +90,10 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Secret Rare
+  - set_number: SR13-DE008
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   fr:
   - set_number: EEN-FR023
     set_name: Elemental Energy
@@ -104,6 +112,10 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Secret Rare
+  - set_number: SR13-FR008
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   it:
   - set_number: EEN-IT023
     set_name: Elemental Energy
@@ -122,11 +134,19 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Secret Rare
+  - set_number: SR13-IT008
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   pt:
   - set_number: LCJW-PT245
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Secret Rare
+  - set_number: SR13-PT008
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   ja:
   - set_number: EEN-JP023
     set_name: Elemental Energy
