--- a/data/cards/33017655.yaml
+++ b/data/cards/33017655.yaml
@@ -55,6 +55,10 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Ultra Rare
+  - set_number: SR13-EN045
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   de:
   - set_number: SDGU-DE023
     set_name: Gates of the Underworld Structure Deck
@@ -68,6 +72,10 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Ultra Rare
+  - set_number: SR13-DE045
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   fr:
   - set_number: SDGU-FR023
     set_name: Gates of the Underworld Structure Deck
@@ -81,6 +89,10 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Ultra Rare
+  - set_number: SR13-FR045
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   it:
   - set_number: SDGU-IT023
     set_name: Gates of the Underworld Structure Deck
@@ -94,6 +106,10 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Ultra Rare
+  - set_number: SR13-IT045
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   pt:
   - set_number: AP01-PT013
     set_name: Astral Pack One
@@ -103,6 +119,10 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Ultra Rare
+  - set_number: SR13-PT045
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   ja:
   - set_number: SD21-JP022
     set_name: "Structure Deck: Devil's Gate"
