--- a/data/cards/34230233.yaml
+++ b/data/cards/34230233.yaml
@@ -67,6 +67,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Rare
+  - set_number: SR13-EN043
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   de:
   - set_number: SDGU-DE001
     set_name: Gates of the Underworld Structure Deck
@@ -88,6 +92,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Rare
+  - set_number: SR13-DE043
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   fr:
   - set_number: SDGU-FR001
     set_name: Gates of the Underworld Structure Deck
@@ -109,6 +117,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Rare
+  - set_number: SR13-FR043
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   it:
   - set_number: SDGU-IT001
     set_name: Gates of the Underworld Structure Deck
@@ -130,6 +142,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Rare
+  - set_number: SR13-IT043
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   pt:
   - set_number: DL18-PT006
     set_name: Duelist League 18 participation cards
@@ -143,6 +159,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Rare
+  - set_number: SR13-PT043
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   ja:
   - set_number: SD21-JP001
     set_name: "Structure Deck: Devil's Gate"
