--- a/data/cards/34968834.yaml
+++ b/data/cards/34968834.yaml
@@ -51,26 +51,46 @@ sets:
     set_name: Primal Origin
     rarities:
     - Super Rare
+  - set_number: SR13-EN005
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   de:
   - set_number: PRIO-DE031
     set_name: Primal Origin
     rarities:
     - Super Rare
+  - set_number: SR13-DE005
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   fr:
   - set_number: PRIO-FR031
     set_name: Primal Origin
     rarities:
     - Super Rare
+  - set_number: SR13-FR005
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   it:
   - set_number: PRIO-IT031
     set_name: Primal Origin
     rarities:
     - Super Rare
+  - set_number: SR13-IT005
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   pt:
   - set_number: PRIO-PT031
     set_name: Primal Origin
     rarities:
     - Super Rare
+  - set_number: SR13-PT005
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   ja:
   - set_number: PRIO-JP031
     set_name: Primal Origin
