--- a/data/cards/35027493.yaml
+++ b/data/cards/35027493.yaml
@@ -72,6 +72,10 @@ sets:
     set_name: 'Structure Deck: Lair of Darkness'
     rarities:
     - Common
+  - set_number: SR13-EN038
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   de:
   - set_number: FET-DE058
     set_name: Flaming Eternity
@@ -100,6 +104,10 @@ sets:
     - Ultra Rare
   - set_number: SR06-DE032
     set_name: 'Structure Deck: Lair of Darkness'
+    rarities:
+    - Common
+  - set_number: SR13-DE038
+    set_name: 'Structure Deck: Dark World'
     rarities:
     - Common
   fr:
@@ -132,6 +140,10 @@ sets:
     set_name: 'Structure Deck: Lair of Darkness'
     rarities:
     - Common
+  - set_number: SR13-FR038
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   it:
   - set_number: FET-IT058
     set_name: Flaming Eternity
@@ -162,6 +174,10 @@ sets:
     set_name: 'Structure Deck: Lair of Darkness'
     rarities:
     - Common
+  - set_number: SR13-IT038
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   pt:
   - set_number: FET-PT058
     set_name: Flaming Eternity
@@ -174,6 +190,10 @@ sets:
     - Ultra Rare
   - set_number: SR06-PT032
     set_name: 'Structure Deck: Lair of Darkness'
+    rarities:
+    - Common
+  - set_number: SR13-PT038
+    set_name: 'Structure Deck: Dark World'
     rarities:
     - Common
   ja:
