--- a/data/cards/43316238.yaml
+++ b/data/cards/43316238.yaml
@@ -61,6 +61,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Premium Gold Rare
+  - set_number: SR13-EN018
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   de:
   - set_number: CYHO-DE082
     set_name: Cybernetic Horizon
@@ -74,6 +78,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Premium Gold Rare
+  - set_number: SR13-DE018
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   fr:
   - set_number: CYHO-FR082
     set_name: Cybernetic Horizon
@@ -87,6 +95,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Premium Gold Rare
+  - set_number: SR13-FR018
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   it:
   - set_number: CYHO-IT082
     set_name: Cybernetic Horizon
@@ -100,6 +112,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Premium Gold Rare
+  - set_number: SR13-IT018
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   pt:
   - set_number: CYHO-PT082
     set_name: Cybernetic Horizon
@@ -113,6 +129,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Premium Gold Rare
+  - set_number: SR13-PT018
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   ja:
   - set_number: EP19-JP021
     set_name: Extra Pack 2019
