--- a/data/cards/47217354.yaml
+++ b/data/cards/47217354.yaml
@@ -59,6 +59,10 @@ sets:
     set_name: Realm of Light Structure Deck
     rarities:
     - Common
+  - set_number: SR13-EN023
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   - set_number: DT07-EN012
     set_name: Duel Terminal 7a
     rarities:
@@ -77,6 +81,10 @@ sets:
     set_name: Realm of Light Structure Deck
     rarities:
     - Common
+  - set_number: SR13-DE023
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   fr:
   - set_number: DREV-FR091
     set_name: Duelist Revolution
@@ -89,6 +97,10 @@ sets:
     - Starfoil Rare
   - set_number: SDLI-FR020
     set_name: Realm of Light Structure Deck
+    rarities:
+    - Common
+  - set_number: SR13-FR023
+    set_name: 'Structure Deck: Dark World'
     rarities:
     - Common
   it:
@@ -105,9 +117,17 @@ sets:
     set_name: Realm of Light Structure Deck
     rarities:
     - Common
+  - set_number: SR13-IT023
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   pt:
   - set_number: SDLI-PT020
     set_name: Realm of Light Structure Deck
+    rarities:
+    - Common
+  - set_number: SR13-PT023
+    set_name: 'Structure Deck: Dark World'
     rarities:
     - Common
   ja:
