--- a/data/cards/51232472.yaml
+++ b/data/cards/51232472.yaml
@@ -54,6 +54,10 @@ sets:
     set_name: Gates of the Underworld Structure Deck
     rarities:
     - Common
+  - set_number: SR13-EN014
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   de:
   - set_number: STON-DE019
     set_name: Strike of Neos
@@ -61,6 +65,10 @@ sets:
     - Common
   - set_number: SDGU-DE008
     set_name: Gates of the Underworld Structure Deck
+    rarities:
+    - Common
+  - set_number: SR13-DE014
+    set_name: 'Structure Deck: Dark World'
     rarities:
     - Common
   fr:
@@ -72,6 +80,10 @@ sets:
     set_name: Gates of the Underworld Structure Deck
     rarities:
     - Common
+  - set_number: SR13-FR014
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   it:
   - set_number: STON-IT019
     set_name: Strike of Neos
@@ -79,6 +91,15 @@ sets:
     - Common
   - set_number: SDGU-IT008
     set_name: Gates of the Underworld Structure Deck
+    rarities:
+    - Common
+  - set_number: SR13-IT014
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
+  pt:
+  - set_number: SR13-PT014
+    set_name: 'Structure Deck: Dark World'
     rarities:
     - Common
   ja:
