--- a/data/cards/52350806.yaml
+++ b/data/cards/52350806.yaml
@@ -54,6 +54,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Prismatic Secret Rare
+  - set_number: SR13-EN020
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   de:
   - set_number: SOFU-DE084
     set_name: Soul Fusion
@@ -63,6 +67,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Prismatic Secret Rare
+  - set_number: SR13-DE020
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   fr:
   - set_number: SOFU-FR084
     set_name: Soul Fusion
@@ -72,6 +80,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Prismatic Secret Rare
+  - set_number: SR13-FR020
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   it:
   - set_number: SOFU-IT084
     set_name: Soul Fusion
@@ -81,6 +93,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Prismatic Secret Rare
+  - set_number: SR13-IT020
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   pt:
   - set_number: SOFU-PT084
     set_name: Soul Fusion
@@ -90,6 +106,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Prismatic Secret Rare
+  - set_number: SR13-PT020
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   ja:
   - set_number: EP19-JP027
     set_name: Extra Pack 2019
