--- a/data/cards/60228941.yaml
+++ b/data/cards/60228941.yaml
@@ -56,6 +56,10 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Secret Rare
+  - set_number: SR13-EN044
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   de:
   - set_number: SDGU-DE002
     set_name: Gates of the Underworld Structure Deck
@@ -65,6 +69,10 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Secret Rare
+  - set_number: SR13-DE044
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   fr:
   - set_number: SDGU-FR002
     set_name: Gates of the Underworld Structure Deck
@@ -74,6 +82,10 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Secret Rare
+  - set_number: SR13-FR044
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   it:
   - set_number: SDGU-IT002
     set_name: Gates of the Underworld Structure Deck
@@ -83,11 +95,19 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Secret Rare
+  - set_number: SR13-IT044
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   pt:
   - set_number: LCJW-PT248
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Secret Rare
+  - set_number: SR13-PT044
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   ja:
   - set_number: SD21-JP002
     set_name: "Structure Deck: Devil's Gate"
