--- a/data/cards/60606759.yaml
+++ b/data/cards/60606759.yaml
@@ -59,6 +59,10 @@ sets:
     set_name: Gates of the Underworld Structure Deck
     rarities:
     - Common
+  - set_number: SR13-EN017
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   de:
   - set_number: TAEV-DE003
     set_name: Tactical Evolution
@@ -70,6 +74,10 @@ sets:
     - Common
   - set_number: SDGU-DE005
     set_name: Gates of the Underworld Structure Deck
+    rarities:
+    - Common
+  - set_number: SR13-DE017
+    set_name: 'Structure Deck: Dark World'
     rarities:
     - Common
   fr:
@@ -85,6 +93,10 @@ sets:
     set_name: Gates of the Underworld Structure Deck
     rarities:
     - Common
+  - set_number: SR13-FR017
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   it:
   - set_number: TAEV-IT003
     set_name: Tactical Evolution
@@ -96,6 +108,15 @@ sets:
     - Common
   - set_number: SDGU-IT005
     set_name: Gates of the Underworld Structure Deck
+    rarities:
+    - Common
+  - set_number: SR13-IT017
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
+  pt:
+  - set_number: SR13-PT017
+    set_name: 'Structure Deck: Dark World'
     rarities:
     - Common
   ja:
