--- a/data/cards/60990740.yaml
+++ b/data/cards/60990740.yaml
@@ -56,6 +56,10 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: SR13-EN024
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   de:
   - set_number: PGL2-DE002
     set_name: 'Premium Gold: Return of the Bling'
@@ -69,6 +73,10 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: SR13-DE024
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   fr:
   - set_number: PGL2-FR002
     set_name: 'Premium Gold: Return of the Bling'
@@ -82,6 +90,10 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: SR13-FR024
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   it:
   - set_number: PGL2-IT002
     set_name: 'Premium Gold: Return of the Bling'
@@ -95,6 +107,10 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: SR13-IT024
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   pt:
   - set_number: PGL2-PT002
     set_name: 'Premium Gold: Return of the Bling'
@@ -108,6 +124,10 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: SR13-PT024
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   ja:
   - set_number: PP17-JP002
     set_name: Premium Pack 17
