--- a/data/cards/72892473.yaml
+++ b/data/cards/72892473.yaml
@@ -77,6 +77,10 @@ sets:
     set_name: OTS Tournament Pack 9
     rarities:
     - Super Rare
+  - set_number: SR13-EN032
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   - set_number: SDY-042
     set_name: 'Starter Deck: Yugi'
     rarities:
@@ -138,6 +142,10 @@ sets:
     set_name: OTS Tournament Pack 9
     rarities:
     - Super Rare
+  - set_number: SR13-DE032
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   fr:
   - set_number: DDY-F038
     set_name: 'Starter Deck: Yugi'
@@ -183,6 +191,10 @@ sets:
     set_name: OTS Tournament Pack 9
     rarities:
     - Super Rare
+  - set_number: SR13-FR032
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   it:
   - set_number: MIY-I038
     set_name: 'Starter Deck: Yugi'
@@ -228,6 +240,10 @@ sets:
     set_name: OTS Tournament Pack 9
     rarities:
     - Super Rare
+  - set_number: SR13-IT032
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   pt:
   - set_number: DIY-P042
     set_name: 'Starter Deck: Yugi'
@@ -245,6 +261,10 @@ sets:
     set_name: OTS Tournament Pack 9
     rarities:
     - Super Rare
+  - set_number: SR13-PT032
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   ja:
   - set_number: EX-87
     set_name: EX-R Starter Box
