--- a/data/cards/74117290.yaml
+++ b/data/cards/74117290.yaml
@@ -64,6 +64,10 @@ sets:
     set_name: Mystic Fighters
     rarities:
     - Super Rare
+  - set_number: SR13-EN027
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   de:
   - set_number: STON-DE038
     set_name: Strike of Neos
@@ -86,6 +90,10 @@ sets:
     set_name: Mystic Fighters
     rarities:
     - Super Rare
+  - set_number: SR13-DE027
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   fr:
   - set_number: STON-FR038
     set_name: Strike of Neos
@@ -108,6 +116,10 @@ sets:
     set_name: Mystic Fighters
     rarities:
     - Super Rare
+  - set_number: SR13-FR027
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   it:
   - set_number: STON-IT038
     set_name: Strike of Neos
@@ -130,6 +142,10 @@ sets:
     set_name: Mystic Fighters
     rarities:
     - Super Rare
+  - set_number: SR13-IT027
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   pt:
   - set_number: LCJW-PT251
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
@@ -139,6 +155,10 @@ sets:
     set_name: Mystic Fighters
     rarities:
     - Super Rare
+  - set_number: SR13-PT027
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   ja:
   - set_number: STON-JP038
     set_name: Strike of Neos
