--- a/data/cards/78004197.yaml
+++ b/data/cards/78004197.yaml
@@ -73,6 +73,10 @@ sets:
     set_name: Premium Gold
     rarities:
     - Gold Rare
+  - set_number: SR13-EN007
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   - set_number: DR04-EN084
     set_name: Dark Revelation Volume 4
     rarities:
@@ -103,6 +107,10 @@ sets:
     set_name: Premium Gold
     rarities:
     - Gold Rare
+  - set_number: SR13-DE007
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   fr:
   - set_number: EEN-FR024
     set_name: Elemental Energy
@@ -129,6 +137,10 @@ sets:
     set_name: Premium Gold
     rarities:
     - Gold Rare
+  - set_number: SR13-FR007
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   it:
   - set_number: EEN-IT024
     set_name: Elemental Energy
@@ -155,6 +167,10 @@ sets:
     set_name: Premium Gold
     rarities:
     - Gold Rare
+  - set_number: SR13-IT007
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   pt:
   - set_number: LCJW-PT246
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
@@ -164,6 +180,10 @@ sets:
     set_name: Premium Gold
     rarities:
     - Gold Rare
+  - set_number: SR13-PT007
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   ja:
   - set_number: EEN-JP024
     set_name: Elemental Energy
