--- a/data/cards/79126789.yaml
+++ b/data/cards/79126789.yaml
@@ -60,6 +60,10 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Secret Rare
+  - set_number: SR13-EN011
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   - set_number: DR04-EN081
     set_name: Dark Revelation Volume 4
     rarities:
@@ -78,6 +82,10 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Secret Rare
+  - set_number: SR13-DE011
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   fr:
   - set_number: EEN-FR021
     set_name: Elemental Energy
@@ -92,6 +100,10 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Secret Rare
+  - set_number: SR13-FR011
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   it:
   - set_number: EEN-IT021
     set_name: Elemental Energy
@@ -106,11 +118,19 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Secret Rare
+  - set_number: SR13-IT011
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   pt:
   - set_number: LCJW-PT243
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Secret Rare
+  - set_number: SR13-PT011
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   ja:
   - set_number: EEN-JP021
     set_name: Elemental Energy
