--- a/data/cards/85325774.yaml
+++ b/data/cards/85325774.yaml
@@ -51,6 +51,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Common
+  - set_number: SR13-EN028
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   de:
   - set_number: PHRA-DE063
     set_name: Phantom Rage
@@ -58,6 +62,10 @@ sets:
     - Common
   - set_number: MP21-DE206
     set_name: 2021 Tin of Ancient Battles
+    rarities:
+    - Common
+  - set_number: SR13-DE028
+    set_name: 'Structure Deck: Dark World'
     rarities:
     - Common
   fr:
@@ -69,6 +77,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Common
+  - set_number: SR13-FR028
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   it:
   - set_number: PHRA-IT063
     set_name: Phantom Rage
@@ -78,6 +90,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Common
+  - set_number: SR13-IT028
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   pt:
   - set_number: PHRA-PT063
     set_name: Phantom Rage
@@ -85,6 +101,10 @@ sets:
     - Common
   - set_number: MP21-PT206
     set_name: 2021 Tin of Ancient Battles
+    rarities:
+    - Common
+  - set_number: SR13-PT028
+    set_name: 'Structure Deck: Dark World'
     rarities:
     - Common
   ja:
