--- a/data/cards/90807199.yaml
+++ b/data/cards/90807199.yaml
@@ -58,6 +58,10 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ultra Rare
+  - set_number: SR13-EN019
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   de:
   - set_number: SOFU-DE082
     set_name: Soul Fusion
@@ -71,6 +75,10 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ultra Rare
+  - set_number: SR13-DE019
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   fr:
   - set_number: SOFU-FR082
     set_name: Soul Fusion
@@ -84,6 +92,10 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ultra Rare
+  - set_number: SR13-FR019
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   it:
   - set_number: SOFU-IT082
     set_name: Soul Fusion
@@ -97,6 +109,10 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ultra Rare
+  - set_number: SR13-IT019
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   pt:
   - set_number: SOFU-PT082
     set_name: Soul Fusion
@@ -110,6 +126,10 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ultra Rare
+  - set_number: SR13-PT019
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   ja:
   - set_number: EP19-JP025
     set_name: Extra Pack 2019
