--- a/data/cards/93554166.yaml
+++ b/data/cards/93554166.yaml
@@ -59,6 +59,10 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Secret Rare
+  - set_number: SR13-EN030
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   - set_number: DR04-EN098
     set_name: Dark Revelation Volume 4
     rarities:
@@ -80,6 +84,10 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Secret Rare
+  - set_number: SR13-DE030
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   fr:
   - set_number: EEN-FR038
     set_name: Elemental Energy
@@ -97,6 +105,10 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Secret Rare
+  - set_number: SR13-FR030
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   it:
   - set_number: EEN-IT038
     set_name: Elemental Energy
@@ -114,11 +126,19 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Secret Rare
+  - set_number: SR13-IT030
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   pt:
   - set_number: LCJW-PT249
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Secret Rare
+  - set_number: SR13-PT030
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   ja:
   - set_number: EEN-JP038
     set_name: Elemental Energy
