--- a/data/cards/15800838.yaml
+++ b/data/cards/15800838.yaml
@@ -73,6 +73,10 @@ sets:
     set_name: Speed Duel Tournament Pack 4
     rarities:
     - Ultra Rare
+  - set_number: SR13-EN037
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   de:
   - set_number: SOD-DE056
     set_name: Soul of the Duelist
@@ -106,6 +110,10 @@ sets:
     set_name: Speed Duel Tournament Pack 4
     rarities:
     - Ultra Rare
+  - set_number: SR13-DE037
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   fr:
   - set_number: SOD-FR056
     set_name: Soul of the Duelist
@@ -139,6 +147,10 @@ sets:
     set_name: Speed Duel Tournament Pack 4
     rarities:
     - Ultra Rare
+  - set_number: SR13-FR037
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   it:
   - set_number: SOD-IT056
     set_name: Soul of the Duelist
@@ -172,6 +184,10 @@ sets:
     set_name: Speed Duel Tournament Pack 4
     rarities:
     - Ultra Rare
+  - set_number: SR13-IT037
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   pt:
   - set_number: SOD-PT056
     set_name: Soul of the Duelist
@@ -185,6 +201,10 @@ sets:
     set_name: Speed Duel Tournament Pack 4
     rarities:
     - Ultra Rare
+  - set_number: SR13-PT037
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   ja:
   - set_number: SOD-JP056
     set_name: Soul of the Duelist
