--- a/data/cards/16435215.yaml
+++ b/data/cards/16435215.yaml
@@ -61,6 +61,10 @@ sets:
     set_name: 'Structure Deck: Zombie Horde'
     rarities:
     - Common
+  - set_number: SR13-EN031
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   - set_number: DCR-084
     set_name: Dark Crisis
     rarities:
@@ -86,6 +90,10 @@ sets:
     set_name: 'Structure Deck: Zombie Horde'
     rarities:
     - Common
+  - set_number: SR13-DE031
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   fr:
   - set_number: DR1-FR246
     set_name: Dark Revelation Volume 1
@@ -105,6 +113,10 @@ sets:
     - Common
   - set_number: SR07-FR031
     set_name: 'Structure Deck: Zombie Horde'
+    rarities:
+    - Common
+  - set_number: SR13-FR031
+    set_name: 'Structure Deck: Dark World'
     rarities:
     - Common
   it:
@@ -128,6 +140,10 @@ sets:
     set_name: 'Structure Deck: Zombie Horde'
     rarities:
     - Common
+  - set_number: SR13-IT031
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   pt:
   - set_number: DR1-PT246
     set_name: Dark Revelation Volume 1
@@ -139,6 +155,10 @@ sets:
     - Common
   - set_number: SR07-PT031
     set_name: 'Structure Deck: Zombie Horde'
+    rarities:
+    - Common
+  - set_number: SR13-PT031
+    set_name: 'Structure Deck: Dark World'
     rarities:
     - Common
   ja:
