--- a/data/cards/25847467.yaml
+++ b/data/cards/25847467.yaml
@@ -54,6 +54,10 @@ sets:
     set_name: Gates of the Underworld Structure Deck
     rarities:
     - Common
+  - set_number: SR13-EN013
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   de:
   - set_number: STON-DE018
     set_name: Strike of Neos
@@ -61,6 +65,10 @@ sets:
     - Common
   - set_number: SDGU-DE007
     set_name: Gates of the Underworld Structure Deck
+    rarities:
+    - Common
+  - set_number: SR13-DE013
+    set_name: 'Structure Deck: Dark World'
     rarities:
     - Common
   fr:
@@ -72,6 +80,10 @@ sets:
     set_name: Gates of the Underworld Structure Deck
     rarities:
     - Common
+  - set_number: SR13-FR013
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   it:
   - set_number: STON-IT018
     set_name: Strike of Neos
@@ -79,6 +91,15 @@ sets:
     - Common
   - set_number: SDGU-IT007
     set_name: Gates of the Underworld Structure Deck
+    rarities:
+    - Common
+  - set_number: SR13-IT013
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
+  pt:
+  - set_number: SR13-PT013
+    set_name: 'Structure Deck: Dark World'
     rarities:
     - Common
   ja:
