--- a/data/cards/41930553.yaml
+++ b/data/cards/41930553.yaml
@@ -53,6 +53,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: SR13-EN036
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   de:
   - set_number: PHSW-DE089
     set_name: Photon Shockwave
@@ -64,6 +68,10 @@ sets:
     - Super Rare
   - set_number: SBCB-DE126
     set_name: 'Speed Duel: Battle City Box'
+    rarities:
+    - Common
+  - set_number: SR13-DE036
+    set_name: 'Structure Deck: Dark World'
     rarities:
     - Common
   fr:
@@ -79,6 +87,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: SR13-FR036
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   it:
   - set_number: PHSW-IT089
     set_name: Photon Shockwave
@@ -90,6 +102,10 @@ sets:
     - Super Rare
   - set_number: SBCB-IT126
     set_name: 'Speed Duel: Battle City Box'
+    rarities:
+    - Common
+  - set_number: SR13-IT036
+    set_name: 'Structure Deck: Dark World'
     rarities:
     - Common
   ja:
