--- a/data/cards/82732705.yaml
+++ b/data/cards/82732705.yaml
@@ -87,6 +87,7 @@ sets:
   - set_number: SR13-EN040
     set_name: 'Structure Deck: Dark World'
     rarities:
+    - Common
   - set_number: DCR-049
     set_name: Dark Crisis
     rarities:
@@ -133,6 +134,10 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+  - set_number: SR13-DE040
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   fr:
   - set_number: DR1-FR211
     set_name: Dark Revelation Volume 1
@@ -171,6 +176,10 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+  - set_number: SR13-FR040
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   it:
   - set_number: DR1-IT211
     set_name: Dark Revelation Volume 1
@@ -209,6 +218,10 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+  - set_number: SR13-IT040
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   pt:
   - set_number: DR1-PT211
     set_name: Dark Revelation Volume 1
@@ -230,6 +243,10 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+  - set_number: SR13-PT040
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
   ja:
   - set_number: 304-049
     set_name: Power of the Guardian
