--- a/data/cards/00575512.yaml
+++ b/data/cards/00575512.yaml
@@ -12,7 +12,7 @@ name:
   ko: <ruby>PSY<rt>싸이</rt></ruby>프레임 서킷
   ko_rr: Ssai-Peureim Seokit
   zh-TW:
-  zh-CN: PSY骨架回路
+  zh-CN: 精神骨架回路
 text:
   en: |-
     If a "PSY-Frame" monster(s) is Special Summoned to your side of the field (except during the Damage Step), you can: Immediately after this effect resolves, Synchro Summon 1 Synchro Monster, using only "PSY-Frame" monsters you control. At the start of the Damage Step, if a "PSY-Frame" monster you control battles an opponent's monster: You can discard 1 "PSY-Frame" monster; your battling monster gains ATK equal to the discarded monster's ATK until the end of this turn.
@@ -32,7 +32,7 @@ text:
     ①: 자신 필드에 "PSY(싸이)프레임" 몬스터가 특수 소환되었을 경우에 발동할 수 있다. 자신 필드의 "PSY(싸이)프레임" 몬스터만을 싱크로 소재로서 싱크로 소환한다. ②: 자신의 "PSY(싸이)프레임" 몬스터가 상대 몬스터와 전투를 실행하는 데미지 스텝 개시시에, 패의 "PSY(싸이)프레임" 몬스터 1장을 버리고 발동할 수 있다. 그 전투를 실행하는 자신 몬스터의 공격력은 턴 종료시까지, 이 효과를 발동하기 위해 버린 몬스터의 공격력만큼 올린다.
   zh-TW:
   zh-CN: |-
-    ①：自己场上有「PSY骨架」怪兽特殊召唤的场合才能发动。只用自己场上的「PSY骨架」怪兽为同调素材作同调召唤。②：自己的「PSY骨架」怪兽和对方怪兽进行战斗的伤害步骤开始时，把手卡1只「PSY骨架」怪兽丢弃才能发动。那只进行战斗的自己怪兽的攻击力直到回合结束时上升因为这个效果发动而丢弃的怪兽的攻击力数值。
+    ①："精神骨架"怪兽被特殊召唤至自己场上的情况下可以发动。仅以自己场上的"精神骨架"怪兽作为同步素材同步召唤。②：在自己的"精神骨架"怪兽与对手怪兽进行战斗的伤害步骤开始时，舍弃手牌的1只"精神骨架"怪兽可以发动。进行该战斗的自己怪兽的攻击力直至回合结束时为止，上升相当于为发动此效果舍弃的怪兽的攻击力的数值。
 card_type: Spell
 property: Field
 series:
@@ -84,6 +84,11 @@ sets:
     - Normal Parallel Rare
   - set_number: LVP2-KR090
     set_name: LINK VRAINS Pack 2
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: CL02-SC127
+    set_name: Classic Pack 02
     rarities:
     - Common
 limit_regulation:
