--- a/data/cards/38814750.yaml
+++ b/data/cards/38814750.yaml
@@ -12,7 +12,7 @@ name:
   ko: <ruby>PSY<rt>싸이</rt></ruby>프레임기어 <ruby>γ<rt>감마</rt></ruby>
   ko_rr: Ssai-Peureimgi-eo Gamma
   zh-TW:
-  zh-CN: PSY骨架装备·γ
+  zh-CN: 精神骨架装备 伽马
 text:
   en: |-
     Cannot be Normal Summoned/Set. Must be Special Summoned by a card effect. When your opponent activates a monster effect while you control no monsters (Quick Effect): You can Special Summon both this card from your hand and 1 "PSY-Frame Driver" from your hand, Deck, or GY, and if you do, negate that activation, and if you do that, destroy that monster. During the End Phase, banish the face-up monsters Special Summoned by this effect.
@@ -32,7 +32,7 @@ text:
     이 카드는 통상 소환할 수 없으며, 카드의 효과로만 특수 소환할 수 있다. ①: 자신 필드에 몬스터가 존재하지 않으며, 상대 몬스터의 효과가 발동했을 때에 발동할 수 있다. 패의 이 카드와 자신의 패 / 덱 / 묘지의 "PSY(싸이)프레임 드라이버" 1장을 골라 특수 소환하고, 그 발동을 무효로 하여 파괴한다. 이 효과로 특수 소환한 몬스터는 전부 엔드 페이즈에 제외된다.
   zh-TW:
   zh-CN: |-
-    这张卡不能通常召唤，用卡的效果才能特殊召唤。①：自己场上没有怪兽存在，对方怪兽的效果发动时才能发动。选手卡的这张卡和自己的手卡·卡组·墓地1只「PSY骨架驱动者」特殊召唤，那个发动无效并破坏。这个效果特殊召唤的怪兽全部在结束阶段除外。
+    此卡不可通常召唤，仅可以卡的效果特殊召唤。①：自己场上不存在怪兽，对手怪兽的效果发动时可以发动。挑选自己手牌・牌组・墓地的1只"精神骨架 驱动者"，和手牌的此卡一起特殊召唤，将该发动无效并破坏。以此效果特殊召唤的怪兽将全部在结束阶段被除外。
 card_type: Monster
 monster_type_line: Psychic / Tuner / Effect
 attribute: LIGHT
@@ -166,6 +166,11 @@ sets:
     - Common
   - set_number: SP19-KR004
     set_name: Special Pack Vol.1
+    rarities:
+    - Super Rare
+  zh-CN:
+  - set_number: CL02-SC122
+    set_name: Classic Pack 02
     rarities:
     - Super Rare
 limit_regulation:
