--- a/data/cards/31006879.yaml
+++ b/data/cards/31006879.yaml
@@ -34,6 +34,26 @@ images:
 - index: 1
   image: OnYourMarkGetSetDUEL-HC01-JP-SR.png
 sets:
+  en:
+  - set_number: MAZE-EN0??
+    set_name: Maze of Memories
+    rarities:
+  de:
+  - set_number: MAZE-DE0??
+    set_name: Maze of Memories
+    rarities:
+  fr:
+  - set_number: MAZE-FR0??
+    set_name: Maze of Memories
+    rarities:
+  it:
+  - set_number: MAZE-IT0??
+    set_name: Maze of Memories
+    rarities:
+  pt:
+  - set_number: MAZE-PT0??
+    set_name: Maze of Memories
+    rarities:
   ja:
   - set_number: HC01-JP019
     set_name: History Archive Collection
