--- a/data/cards/93777634.yaml
+++ b/data/cards/93777634.yaml
@@ -46,6 +46,26 @@ images:
 - index: 1
   image: Number39UtopiaRising-HC01-JP-SR.png
 sets:
+  en:
+  - set_number: MAZE-EN0??
+    set_name: Maze of Memories
+    rarities:
+  de:
+  - set_number: MAZE-DE0??
+    set_name: Maze of Memories
+    rarities:
+  fr:
+  - set_number: MAZE-FR0??
+    set_name: Maze of Memories
+    rarities:
+  it:
+  - set_number: MAZE-IT0??
+    set_name: Maze of Memories
+    rarities:
+  pt:
+  - set_number: MAZE-PT0??
+    set_name: Maze of Memories
+    rarities:
   ja:
   - set_number: HC01-JP028
     set_name: History Archive Collection
