--- a/data/cards/21887175.yaml
+++ b/data/cards/21887175.yaml
@@ -67,6 +67,9 @@ sets:
     set_name: 2020 Tin of Lost Memories
     rarities:
     - Ultra Rare
+  - set_number: MAZE-EN0??
+    set_name: Maze of Memories
+    rarities:
   de:
   - set_number: DANE-DE047
     set_name: Dark Neostorm
@@ -76,6 +79,9 @@ sets:
     set_name: 2020 Tin of Lost Memories
     rarities:
     - Ultra Rare
+  - set_number: MAZE-DE0??
+    set_name: Maze of Memories
+    rarities:
   fr:
   - set_number: DANE-FR047
     set_name: Dark Neostorm
@@ -85,6 +91,9 @@ sets:
     set_name: 2020 Tin of Lost Memories
     rarities:
     - Ultra Rare
+  - set_number: MAZE-FR0??
+    set_name: Maze of Memories
+    rarities:
   it:
   - set_number: DANE-IT047
     set_name: Dark Neostorm
@@ -94,6 +103,9 @@ sets:
     set_name: 2020 Tin of Lost Memories
     rarities:
     - Ultra Rare
+  - set_number: MAZE-IT0??
+    set_name: Maze of Memories
+    rarities:
   pt:
   - set_number: DANE-PT047
     set_name: Dark Neostorm
@@ -103,6 +115,9 @@ sets:
     set_name: 2020 Tin of Lost Memories
     rarities:
     - Ultra Rare
+  - set_number: MAZE-PT0??
+    set_name: Maze of Memories
+    rarities:
   ja:
   - set_number: DANE-JP047
     set_name: Dark Neostorm
