--- a/data/cards/25716180.yaml
+++ b/data/cards/25716180.yaml
@@ -50,24 +50,40 @@ sets:
     rarities:
     - Ultra Rare
     - Ultimate Rare
+  - set_number: MAZE-EN0??
+    set_name: Maze of Memories
+    rarities:
   de:
   - set_number: PHSW-DE026
     set_name: Photon Shockwave
     rarities:
     - Ultra Rare
     - Ultimate Rare
+  - set_number: MAZE-DE0??
+    set_name: Maze of Memories
+    rarities:
   fr:
   - set_number: PHSW-FR026
     set_name: Photon Shockwave
     rarities:
     - Ultra Rare
     - Ultimate Rare
+  - set_number: MAZE-FR0??
+    set_name: Maze of Memories
+    rarities:
   it:
   - set_number: PHSW-IT026
     set_name: Photon Shockwave
     rarities:
     - Ultra Rare
     - Ultimate Rare
+  - set_number: MAZE-IT0??
+    set_name: Maze of Memories
+    rarities:
+  pt:
+  - set_number: MAZE-PT0??
+    set_name: Maze of Memories
+    rarities:
   ja:
   - set_number: PHSW-JP026
     set_name: Photon Shockwave
