--- a/data/cards/33779875.yaml
+++ b/data/cards/33779875.yaml
@@ -60,26 +60,41 @@ sets:
     set_name: Secret Slayers
     rarities:
     - Secret Rare
+  - set_number: MAZE-EN0??
+    set_name: Maze of Memories
+    rarities:
   de:
   - set_number: SESL-DE022
     set_name: Secret Slayers
     rarities:
     - Secret Rare
+  - set_number: MAZE-DE0??
+    set_name: Maze of Memories
+    rarities:
   fr:
   - set_number: SESL-FR022
     set_name: Secret Slayers
     rarities:
     - Secret Rare
+  - set_number: MAZE-FR0??
+    set_name: Maze of Memories
+    rarities:
   it:
   - set_number: SESL-IT022
     set_name: Secret Slayers
     rarities:
     - Secret Rare
+  - set_number: MAZE-IT0??
+    set_name: Maze of Memories
+    rarities:
   pt:
   - set_number: SESL-PT022
     set_name: Secret Slayers
     rarities:
     - Secret Rare
+  - set_number: MAZE-PT0??
+    set_name: Maze of Memories
+    rarities:
   ja:
   - set_number: DBSS-JP022
     set_name: 'Deck Build Pack: Secret Slayers'
