--- a/data/cards/97997309.yaml
+++ b/data/cards/97997309.yaml
@@ -74,24 +74,40 @@ sets:
     rarities:
     - Ultimate Rare
     - Ultra Rare
+  - set_number: MAZE-EN0??
+    set_name: Maze of Memories
+    rarities:
   de:
   - set_number: ABYR-DE059
     set_name: Abyss Rising
     rarities:
     - Ultimate Rare
     - Ultra Rare
+  - set_number: MAZE-DE0??
+    set_name: Maze of Memories
+    rarities:
   fr:
   - set_number: ABYR-FR059
     set_name: Abyss Rising
     rarities:
     - Ultimate Rare
     - Ultra Rare
+  - set_number: MAZE-FR0??
+    set_name: Maze of Memories
+    rarities:
   it:
   - set_number: ABYR-IT059
     set_name: Abyss Rising
     rarities:
     - Ultimate Rare
     - Ultra Rare
+  - set_number: MAZE-IT0??
+    set_name: Maze of Memories
+    rarities:
+  pt:
+  - set_number: MAZE-PT0??
+    set_name: Maze of Memories
+    rarities:
   ja:
   - set_number: ABYR-JP059
     set_name: Abyss Rising
