--- a/data/rush/16933.yaml
+++ b/data/rush/16933.yaml
@@ -64,4 +64,8 @@ sets:
     set_name: Extra Transcend Enhancement Pack
     rarities:
     - Secret Rare
+  - set_number: RD/SD01-KRP01
+    set_name: Strongest Battle Deck Tournament 2022 prize card
+    rarities:
+    - Secret Rare
 yugipedia_page_id: 829588
